Add controller, config implementation and fix bean injection